* fix broken screen shot link

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <p>Demo Application builds on top of the Virus Total Public API v2.0 PHP Wrapper library (<a href="https://github.com/jayzeng/virustotal_apiwrapper">https://github.com/jayzeng/virustotal_apiwrapper</a>)</p>
 
-<p>This application is used to illustrate how to use the wrapper library and I would suggest you NOT to use it on production without 
+<p>This application is used to illustrate how to use the wrapper library and I would suggest you NOT to use it on production without
 carefully reviewing the source code. The app is built on top of angularjs (angularjs.org). </p>
 
 <p>Project skeleton was generated with:</p>
@@ -55,7 +55,7 @@ carefully reviewing the source code. The app is built on top of angularjs (angul
 </ul><h2>
 <a name="screenshot" class="anchor" href="#screenshot"><span class="octicon octicon-link"></span></a>Screenshot:</h2>
 
-<p><img src="virus_total_demoapp.png" alt="screenshot"></p>
+<p><img src="https://github.com/jayzeng/virustotal_demoapp/raw/master/virus_total_demoapp.png" alt="screenshot"></p>
 
 <h2>
 <a name="dev-dependencies" class="anchor" href="#dev-dependencies"><span class="octicon octicon-link"></span></a>Dev Dependencies:</h2>
@@ -103,6 +103,6 @@ carefully reviewing the source code. The app is built on top of angularjs (angul
 
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
+
   </body>
 </html>
